@@ -28,7 +28,7 @@ email!): Akira Hatakeyama, Karl J. Runge, Justin "Zippy" Dearing,
 Oliver Mihatsch, Greg Sternberg, Werner Hofer, Giampiero Giancipoli,
 Glenn Mabutt, Paul Kreiner, Erik Kunze, Mike Frysinger, Martin Waitz,
 Mark McLoughlin, Paul Fox, Juan Jose Costello, Andre Leiadella,
-Alberto Lusiani.
+Alberto Lusiani, Malvina Mazin, Dave Stuart.
 
 Probably I forgot quite a few people sending a patch here and there, which
 really made a difference. Without those, some obscure bugs still would
